# iVS3D

./: .gitattributes  .gitignore  .gitmodules  .swp  Licences.txt  README.md  iVS3D-deploy.sh  linux-dependencies.txt
iVS3D/: .qmake.stash  3rdparty.txt  3rdparty_debian10-x64-cuda.json  CMakeLists.txt  iVS3D.pro  setrpath.pri
iVS3D/cmake/: gitversion.cmake
iVS3D/src/: CMakeLists.txt  src.pro
iVS3D/src/iVS3D-PythonSandboxPlugin/: CMakeLists.txt  pythonsandbox.cpp  pythonsandbox.h  resources.qrc
iVS3D/src/iVS3D-PythonSandboxPlugin/translations/: pythonsandbox_de.ts  pythonsandbox_en.ts
iVS3D/src/iVS3D-blurPlugin/: BlurAlgorithm.cpp  BlurAlgorithm.h  CMakeLists.txt  blur.cpp  blur.h  blurlaplacian.cpp  blurlaplacian.h  blursobel.cpp  blursobel.h  iVS3D-blurPlugin.pro  resources.qrc
iVS3D/src/iVS3D-blurPlugin/translations/: blur_de.ts  blur_en.ts
iVS3D/src/iVS3D-cameraMovementPlugin/: CMakeLists.txt  cameramovement.cpp  cameramovement.h  farnebackoptflow.h  farnebackoptflowcpu.cpp  farnebackoptflowcpu.h  farnebackoptflowfactory.h  farnebackoptflowgpu.h  iVS3D-cameraMovementPlugin.pro
iVS3D/src/iVS3D-core/: CMakeLists.txt  applicationsettings.cpp  applicationsettings.h  cvmat_qmetadata.h  iVS3D-core.pro  iVS3D-core_resource.rc  lib3D_ots.qrc  main.cpp  prebuild_cmds.pri  resources.qrc  stringcontainer.cpp  stringcontainer.h
iVS3D/src/iVS3D-core/colmap/: defaultdatabase.db
iVS3D/src/iVS3D-core/controller/: ModelInputIterator.h  algorithmcontroller.cpp  algorithmcontroller.h  automaticcontroller.cpp  automaticcontroller.h  controller.cpp  controller.h  exportcontroller.cpp  exportcontroller.h  imageiterator.cpp  imageiterator.h  keyframeiterator.cpp  keyframeiterator.h  modelinputiteratorfactory.cpp  modelinputiteratorfactory.h  nouicontroller.cpp  nouicontroller.h  stackcontroller.cpp  stackcontroller.h  videoplayercontroller.cpp  videoplayercontroller.h
iVS3D/src/iVS3D-core/copy_to_install_dir/: iVS3D-runner.txt  settings.json
iVS3D/src/iVS3D-core/model/: DataManager.cpp  DataManager.h  LogFileParent.h  algorithmexecutor.cpp  algorithmexecutor.h  algorithmthread.cpp  algorithmthread.h  applicationsettings.cpp  applicationsettings.h  automaticexecsettings.cpp  automaticexecsettings.h  automaticexecutor.cpp  automaticexecutor.h  concurrentreader.cpp  concurrentreader.h  delayedcopyreader.cpp  delayedcopyreader.h  exportexecutor.cpp  exportexecutor.h  exportthread.cpp  exportthread.h  gpsreader.cpp  gpsreader.h  gpsreaderdji.cpp  gpsreaderdji.h  gpsreaderexif.cpp  gpsreaderexif.h  history.cpp  imagereader.cpp  imagereader.h  jsonEnum.cpp  jsonEnum.h  logfile.cpp  logfile.h  metadata.h  metadatamanager.cpp  metadatamanager.h  metadatareader.h  modelalgorithm.cpp  modelalgorithm.h  (+22 more)
iVS3D/src/iVS3D-core/ots/: colmapwrapper.cpp  colmapwrapper.h  global.h  subsamplingdialog.cpp  subsamplingdialog.h  subsamplingdialog.ui  translations.cpp  translations.h
iVS3D/src/iVS3D-core/plugin/: IAlgorithm.h  algorithmmanager.cpp  algorithmmanager.h  itransformrequestdequeue.cpp  itransformrequestdequeue.h  signalobject.cpp  signalobject.h  transformmanager.cpp  transformmanager.h
iVS3D/src/iVS3D-core/translations/: core_de.ts  core_en.ts  lib3D_ots_de.ts  lib3D_ots_en.ts
iVS3D/src/iVS3D-core/view/: about.cpp  about.h  about.ui  automaticlistwidget.cpp  automaticlistwidget.h  automaticwidget.cpp  automaticwidget.h  automaticwidget.ui  (+64 more)
iVS3D/src/iVS3D-geoDistancePlugin/: CMakeLists.txt  geodistance.cpp  geodistance.h  geodistance.qrc  iVS3D-geoDistancePlugin.pro
iVS3D/src/iVS3D-geoMapPlugin/: CMakeLists.txt  geomap.cpp  geomap.h  geomap.qrc  iVS3D-geoMapPlugin.pro  map.qml  maphandler.cpp  maphandler.h  mapmarker.qml
iVS3D/src/iVS3D-nthFramePlugin/: CMakeLists.txt  iVS3D-nthFramePlugin.pro  nthframe.cpp  nthframe.h  nthframe_global.h  resources.qrc
iVS3D/src/iVS3D-pluginInterface/: CMakeLists.txt  iVS3D-pluginInterface.pro  iVS3D-pluginInterface_global.h  ialgorithm.h  itransform.h
iVS3D/src/iVS3D-pythonSandbox/: CMakeLists.txt  resources.qrc  sandbox_main.cpp  sandbox_main.h
iVS3D/src/iVS3D-semanticSegmentationPlugin/: CMakeLists.txt  iVS3D-semanticSegmentationPlugin.pro  resources.qrc  semanticsegmentation.cpp  semanticsegmentation.h  semanticsegmentation_global.h  settingswidget.cpp  settingswidget.h  spinnericon.cpp  spinnericon.h
iVS3D/src/iVS3D-smoothCameraMovementPlugin/: CMakeLists.txt  flowcalculator.cpp  flowcalculator.h  flowcalculatorcpu.cpp  flowcalculatorcpu.h  flowcalculatorcuda.cpp  iVS3D-smoothCameraMovementPlugin.pro  imagegatherer.h  imagegatherercpu.cpp  imagegatherercuda.h  keyframeselector.cpp  keyframeselector.h  movementfactor.cpp  movementfactor.h  optflowcontroller.cpp  optflowcontroller.h  resources.qrc  smoothcontroller.cpp  smoothcontroller.h
iVS3D/src/iVS3D-stationaryCameraPlugin/: CMakeLists.txt  ankerspaceselector.cpp  ankerspaceselector.h  controller.cpp  controller.h  distributionselector.cpp  distributionselector.h  factory.cpp  factory.h  farnebackoptflow.h  farnebackoptflowcpu.cpp  farnebackoptflowcpu.h  farnebackoptflowfactory.cpp  farnebackoptflowfactory.h  farnebackoptflowgpu.cpp  farnebackoptflowgpu.h  flowcalculator.cpp  flowcalculator.h  flowcalculatorcpu.cpp  flowcalculatorcuda.cpp  flowcalculatorcuda.h  iVS3D-stationaryCameraPlugin.pro  imagegatherer.cpp  imagegatherercpu.cpp  imagegatherercpu.h  imagegatherercuda.cpp  imagegatherercuda.h  keyframeselector.cpp  keyframeselector.h  optflowcontroller.cpp  optflowcontroller.h  resources.qrc  staticselector.cpp  staticselector.h  stationarycamera.cpp  stationarycamera.h
iVS3D/src/iVS3D-visualSimilarityPlugin/: CMakeLists.txt  resources.qrc  visualSimilarity.cpp  visualSimilarity.h
iVS3D/src/iVS3D-visualSimularityPlugin/: CMakeLists.txt  iVS3D-visualSimilarityPlugin.pro  visualSimilarity.cpp  visualSimilarity.h
iVS3D/tests/: CMakeLists.txt  drf.bat  drf.sh  resourceloader.cmake  resourceloader.h  resourceloader.pri  tests.pro
iVS3D/tests/blur/: CMakeLists.txt  blur.pro
iVS3D/tests/core/: CMakeLists.txt  core.pro
iVS3D/tests/nthFrame/: CMakeLists.txt  nthFrame.pro
(+203 files in other folders)
